yaml_sdbback.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdbback-prd-deploy
  namespace: sdb
  labels:
    app: sdbback-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdbback-prd
  template:
    metadata:
      labels:
        app: sdbback-prd
    spec:
      containers:
        - name: sdbback-prd
          image: aarasysadmin/application:sdbback.v98
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sdb-storage
              mountPath: /sdb
      imagePullSecrets:
        - name: dockerhub-cred
      volumes:
        - name: sdb-storage
          persistentVolumeClaim:
            claimName: pvc-sdb-backend
        - name: config-volume
          configMap:
            name: sdb-image
---
apiVersion: v1
kind: Service
metadata:
  name: sdbback-prd-svc
  namespace: sdb
  labels:
    app: sdbback-prd-svc
spec:
  selector:
    app: sdbback-prd
  ports:
    - protocol: TCP
      port: 8487
      targetPort: 8080
  type: ClusterIP
