yaml_sdbbatch.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdbbatch-prd-deploy
  namespace: sdb
  labels:
    app: sdbbatch-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdbbatch-prd
  template:
    metadata:
      labels:
        app: sdbbatch-prd
    spec:
      containers:
        - name: sdbbatch-prd
          image: aarasysadmin/application:sdbbatch.v16
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sdb-storage
              mountPath: /sdb/
      imagePullSecrets:
        - name: dockerhub-cred
      volumes:
        - name: sdb-storage
          persistentVolumeClaim:
            claimName: pvc-sdb-batch

---
apiVersion: v1
kind: Service
metadata:
  name: sdbbatch-prd-svc
  namespace: sdb
  labels:
    app: sdbbatch-prd-svc
spec:
  selector:
    app: sdbbatch-prd
  ports:
    - protocol: TCP
      port: 8487
      targetPort: 8080
  type: ClusterIP
